@@ -8,6 +8,7 @@ Fixes:
 New features:
 
  - Support new features in Marantz AVR protocol: multiple-zone support and additional commandsr (MODELER-516)
+ - Update DateTime protocol configuration (MODELER-517)
 
 Pro 1.0.10
 ==========
